Added bolding to Education section

--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
               </p>
               <h4>Education</h4><hr>
               <p>
-                California State University, Fullerton | May 2026<br>
+                <b>California State University, Fullerton | May 2026</b><br>
                 <li>Bachelor of Science B.S. Computer Science</li>
               </p>
               <p>
-                El Camino College | June 2024<br>
+                <b>El Camino College | June 2024</b><br>
                 <li>Certificate of Achievement Computer Science</li>
                 <li>Coursework: Computing in C++, Data Structures, Computing in Java, Advanced C++</li>
               </p>
               <p>
-                Hawthorne Math & Science Academy | June 2022<br>
+                <b>Hawthorne Math & Science Academy | June 2022</b><br>
                 <li>Certificate of Proficiency (CHSPE)</li>
               </p>
           </div>
