Added tags for projects

--- a/index.html
+++ b/index.html
@@ -141,6 +141,13 @@
                 <h4>IceMan</h4>
                 <p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives.
                   <a href="https://youtu.be/5oswDgrJkNk" title="Iceman Demo">Live Demo</a>
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag opengl">OpenGL</span>
+                    <span class="tag oop">OOP</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag visual-studio-2022">Visual Studio 2022</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/IceMan-Project" title="IceMan Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -151,7 +158,15 @@
               <img src="assets/img/FinanceFirst.png" class="img-fluid project-image" alt="">
               <div class="portfolio-info">
                 <h4>FinanceFirst (Current)</h4>
-                <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.</p>
+                <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag sqlite">SQLite 3</span>
+                    <span class="tag gtk">GTK 3</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
+                </p>
                 <a href="https://github.com/BabikerBabiker/FinanceFirst" title="FinanceFirst Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -163,6 +178,12 @@
                 <h4>Currency X Change</h4>
                 <p>Console-Based application that allows support for over 150 currencies and their conversions. Simple menu to navigate
                   <a href="https://youtu.be/CxL9B_iu-oI" title="Currency X Change Demo">Live Demo</a>
+                  <div class="tags">
+                    <span class="tag java">Java</span>
+                    <span class="tag api">API</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/Currency-X-Change" title="Currency X Change Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -174,6 +195,13 @@
               <div class="portfolio-info">
                 <h4>ClearCast</h4>
                 <p>Sleek weather dashboard app that provides real-time weather updates and forecasts, leveraging geolocation to deliver accurate information directly to your desktop
+                  <div class="tags">
+                    <span class="tag python">Python</span>
+                    <span class="tag tkinter">Tkinter</span>
+                    <span class="tag api">API</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/ClearCast" title="ClearCast Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -186,6 +214,12 @@
                 <h4>ValidCPP</h4>
                 <p>A C++ syntax validation program that checks a .cpp file for balanced quotes, brackets, parenthesis etc.
                   <a href="https://youtu.be/wvVoYRpf4lU" title="ValidCPP Demo">Live Demo</a>
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag file-io">File: I/O</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag visual-studio-2022">Visual Studio 2022</span>
+                  </div>
                 </p>
                 <a href="https://github.com/babikerbabiker/validcpp" title="ValidCPP Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -197,6 +231,13 @@
               <div class="portfolio-info">
                 <h4>Martian Database</h4>
                 <p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag oop">OOP</span>
+                    <span class="tag file-io">File: I/O</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag visual-studio-2022">Visual Studio 2022</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/MartianDB" title="Martian Database Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -208,6 +249,13 @@
               <div class="portfolio-info">
                 <h4>WordShuffle</h4>
                 <p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag file-io">File: I/O</span>
+                    <span class="tag sorting">Sorting</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag visual-studio-2022">Visual Studio 2022</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/WordShuffle" title="WordShuffle Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -219,6 +267,13 @@
               <div class="portfolio-info">
                 <h4>v2 Portfolio</h4>
                 <p>View previous version of my portfolio (v2) <a href="https://bbabiker.com/v2" title="v2. portfolio">here</a>.
+                  <div class="tags">
+                    <span class="tag html">HTML</span>
+                    <span class="tag css">CSS</span>
+                    <span class="tag js">JavaScript</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/v2" title="v2 Portfolio Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -231,6 +286,12 @@
                 <h4>GuessQuest</h4>
                 <p>Guess that target number! User starts off with $1000 and loses $100 per wrong guess. Try to guess in the least amount of guesses as possible!
                   <a href="https://youtu.be/9wJAS5VMF90" title="GuessQuest Demo">Live Demo</a>
+                  <div class="tags">
+                    <span class="tag cplusplus">C++</span>
+                    <span class="tag oop">OOP</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag visual-studio-2022">Visual Studio 2022</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/GuessQuest" title="GuessQuest Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -243,6 +304,12 @@
                 <h4>Rainfall Calculator</h4>
                 <p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total.
                   <a href="https://youtu.be/_xVGM1L4liY" title="Rainfall Calculator Demo">Live Demo</a>
+                  <div class="tags">
+                    <span class="tag java">Java</span>
+                    <span class="tag sorting">Sorting</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
                 </p>
                 <a href="https://github.com/BabikerBabiker/Rainfall-Calculator" title="Rainfall Calculator Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
