--- a/index.html
+++ b/index.html
@@ -262,6 +262,24 @@
             </div><!-- End Portfolio Item -->
 
             <!-- Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-cli">
+              <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="">
+              <div class="portfolio-info">
+                <h4>InstaInsight</h4>
+                <p>Python script that logs into Instagram using credentials from a file, checks for followers and followees, and identifies users who follow you but you don't follow back, utilizing the Instaloader API.
+                  <div class="tags">
+                    <span class="tag python">Python</span>
+                    <span class="tag file-io">File: I/O</span>
+                    <span class="tag api">API</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
+                </p>
+                <a href="https://github.com/BabikerBabiker/InstaInsight" title="InstaInsight Repository" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!-- Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-html">
               <img src="assets/img/portfolio.png" class="img-fluid project-image" alt="">
               <div class="portfolio-info">
