--- a/pantry.html
+++ b/pantry.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://www.pantry.bbabiker.com" />
+    <meta http-equiv="refresh" content="0; url=https://pantry-app-s3u9.vercel.app/" />
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.pantry.bbabiker.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://pantry-app-s3u9.vercel.app/">click here</a>.</p>
 </body>
 </html>
