--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       };
       heap.load("2116135735");
     </script>
-    <meta name="description" content="Babiker Babiker's portfolio showcasing projects, education, and professional experience. Explore my work and contact me for opportunities.">
-    <meta name="keywords" content="Babiker Babiker, portfolio, computer science, CSU Fullerton, SWE Fellow, Headstarter AI, programming, projects">
+    <meta name="description" content="Babiker Babiker's portfolio showcasing projects in C++, Java, HTML/CSS, Python, SQL, GUI, and CLI. Explore my work in software development and more.">
+    <meta name="keywords" content="Babiker Babiker, portfolio, C++, Java, HTML/CSS, Python, SQL, GUI, CLI, software development, web development, programming projects">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Babiker Babiker</title>
@@ -86,7 +86,7 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="assets/img/code.png" alt="" data-aos="fade-in">
+        <img src="assets/img/code.png" alt="Landing Page Image" data-aos="fade-in">
         <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
           <h2>Babiker Babiker</h2>
           <p>
@@ -140,7 +140,7 @@
               <li data-filter=".filter-cpp">C++</li>
               <li data-filter=".filter-java">Java</li>
               <li data-filter=".filter-python">Python</li>
-              <li data-filter=".filter-html">HTML/CSS</li>
+              <li data-filter=".filter-web">Web Dev</li>
               <li data-filter=".filter-cli">CLI</li>
               <li data-filter=".filter-gui">GUI</li>
             </ul>
@@ -148,7 +148,7 @@
             <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui">
-                <img src="assets/img/IceMan.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/IceMan.png" class="img-fluid project-image" alt="IceMan">
                 <div class="portfolio-info">
                   <h4>IceMan</h4>
                   <p>Interactive game using OpenGL that allows user to mine ice, find oil, and escape protestors as its main objectives. <a href="https://youtu.be/5oswDgrJkNk" title="Iceman Demo">Live Demo</a>
@@ -168,7 +168,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui">
-                <img src="assets/img/FinanceFirst.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/FinanceFirst.png" class="img-fluid project-image" alt="FinanceFirst">
                 <div class="portfolio-info">
                   <h4>FinanceFirst (Current)</h4>
                   <p>Banking app which allows for deposits, withdraws, and transferring of money. Uses an SQLite 3 database to effectively & securely store data.
@@ -188,7 +188,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-java filter-cli">
-                <img src="assets/img/CurrencyXChange.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/CurrencyXChange.png" class="img-fluid project-image" alt="Currency X Change">
                 <div class="portfolio-info">
                   <h4>Currency X Change</h4>
                   <p>Console-Based application that allows support for over 150 currencies and their conversions. Simple menu to navigate <a href="https://youtu.be/CxL9B_iu-oI" title="Currency X Change Demo">Live Demo</a>
@@ -205,9 +205,30 @@
                 </div>
               </div>
               <!-- End Portfolio Item -->
+               <!-- Portfolio Item -->
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui">
+                <img src="assets/img/PantryApp.jpg" class="img-fluid project-image" alt="Pantry App">
+                <div class="portfolio-info">
+                  <h4>Pantry App</h4>
+                  <p>An intuitive application designed to manage and track your food inventory with ease, featuring item addition, removal, and detailed sorting and search functionalities. <a href="https://bbabiker.com/pantry">Web App</a>
+                  <div class="tags">
+                    <span class="tag nextjs">Next.js</span>
+                    <span class="tag firebase">Firebase</span>
+                    <span class="tag materialui">Material UI</span>
+                    <span class="tag api">API</span>
+                    <span class="tag github">GitHub</span>
+                    <span class="tag vscode">VS Code</span>
+                  </div>
+                  </p>
+                  <a href="https://github.com/BabikerBabiker/Pantry-App" title="Pantry App Repository" class="details-link">
+                    <i class="bi bi-link-45deg"></i>
+                  </a>
+                </div>
+              </div>
+              <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-gui">
-                <img src="assets/img/ClearCast.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/ClearCast.png" class="img-fluid project-image" alt="ClearCast">
                 <div class="portfolio-info">
                   <h4>ClearCast</h4>
                   <p>Sleek weather dashboard app that provides real-time weather updates and forecasts, leveraging geolocation to deliver accurate information directly to your desktop
@@ -227,7 +248,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
-                <img src="assets/img/ValidCPP.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/ValidCPP.png" class="img-fluid project-image" alt="ValidCPP">
                 <div class="portfolio-info">
                   <h4>ValidCPP</h4>
                   <p>A C++ syntax validation program that checks a .cpp file for balanced quotes, brackets, parenthesis etc. <a href="https://youtu.be/wvVoYRpf4lU" title="ValidCPP Demo">Live Demo</a>
@@ -246,7 +267,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
-                <img src="assets/img/martiandb.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/martiandb.png" class="img-fluid project-image" alt="Martian Database">
                 <div class="portfolio-info">
                   <h4>Martian Database</h4>
                   <p>C++ application that manages a database of Martian individuals. Users can add, delete by SSN, and print entries sorted by first name, last name, or SSN.
@@ -266,7 +287,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
-                <img src="assets/img/wordshuffle.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/wordshuffle.png" class="img-fluid project-image" alt="WordShuffle">
                 <div class="portfolio-info">
                   <h4>WordShuffle</h4>
                   <p>WordShuffle reads a dictionary file, finds anagrams of a user-input string using sorting and permutation algorithms, and displays results via command line.
@@ -286,7 +307,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-cli">
-                <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="">
+                <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="InstaInsight">
                 <div class="portfolio-info">
                   <h4>InstaInsight</h4>
                   <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader API.
@@ -305,8 +326,8 @@
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-html">
-                <img src="assets/img/portfolio.png" class="img-fluid project-image" alt="">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+                <img src="assets/img/portfolio.png" class="img-fluid project-image" alt="v2 Portfolio">
                 <div class="portfolio-info">
                   <h4>v2 Portfolio</h4>
                   <p>View previous version of my portfolio (v2) <a href="https://bbabiker.com/v2" title="v2. portfolio">here</a>.
@@ -326,7 +347,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
-                <img src="assets/img/GuessQuest.jpg" class="img-fluid project-image" alt="">
+                <img src="assets/img/GuessQuest.jpg" class="img-fluid project-image" alt="GuessQuest">
                 <div class="portfolio-info">
                   <h4>GuessQuest</h4>
                   <p>Guess that target number! User starts off with $1000 and loses $100 per wrong guess. Try to guess in the least amount of guesses as possible! <a href="https://youtu.be/9wJAS5VMF90" title="GuessQuest Demo">Live Demo</a>
@@ -345,7 +366,7 @@
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
               <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-java filter-cli">
-                <img src="assets/img/Rainfall.png" class="img-fluid project-image" alt="">
+                <img src="assets/img/Rainfall.png" class="img-fluid project-image" alt="Rainfall Calculator">
                 <div class="portfolio-info">
                   <h4>Rainfall Calculator</h4>
                   <p>Receives user-reported rainfall for each month and performs various tasks such as sorting, average, and total. <a href="https://youtu.be/_xVGM1L4liY" title="Rainfall Calculator Demo">Live Demo</a>
