--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui">
                 <img src="assets/img/portfolio.png" class="img-fluid project-image" alt="v2 Portfolio">
                 <div class="portfolio-info">
                   <h4>v2 Portfolio</h4>
