updated mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta name="description" content="Babiker Babiker's portfolio showcasing projects in C++, Java, HTML/CSS, Python, SQL, GUI, and CLI. Explore my work in software development and more.">
     <meta name="keywords" content="Babiker Babiker, portfolio, C++, Java, HTML/CSS, Python, SQL, GUI, CLI, software development, web development, programming projects">
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Babiker Babiker</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
