Added db filter

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
               <li data-filter=".filter-java">Java</li>
               <li data-filter=".filter-python">Python</li>
               <li data-filter=".filter-web">Web Dev</li>
-              <li data-filter=".filter-cli">CLI</li>
+              <li data-filter=".filter-db">Database</li>
               <li data-filter=".filter-gui">GUI</li>
+              <li data-filter=".filter-cli">CLI</li>
             </ul>
             <!-- End Portfolio Filters -->
             <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -167,7 +168,7 @@
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-gui filter-db">
                 <img src="assets/img/FinanceFirst.png" class="img-fluid project-image" alt="FinanceFirst">
                 <div class="portfolio-info">
                   <h4>FinanceFirst (Current)</h4>
@@ -206,7 +207,7 @@
               </div>
               <!-- End Portfolio Item -->
                <!-- Portfolio Item -->
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-db">
                 <img src="assets/img/PantryApp.jpg" class="img-fluid project-image" alt="Pantry App">
                 <div class="portfolio-info">
                   <h4>Pantry App</h4>
@@ -266,7 +267,7 @@
               </div>
               <!-- End Portfolio Item -->
               <!-- Portfolio Item -->
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli">
+              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-cpp filter-cli filter-db">
                 <img src="assets/img/martiandb.png" class="img-fluid project-image" alt="Martian Database">
                 <div class="portfolio-info">
                   <h4>Martian Database</h4>
