Added blog & updated about me

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                      <a href="#portfolio">Portfolio</a>
                   </li>
                   <li>
+                     <a href="#blog">Blog</a>
+                  </li>
+                  <li>
                      <a href="#contact">Contact</a>
                   </li>
                </ul>
@@ -101,7 +104,7 @@
                <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
                   <div class="about-me">
                      <h2>About me</h2>
-                     <p>Through my academic and personal experiences, I've showcased my ability to persevere through adversity. Embracing these hardships has fortified my determination to succeed academically and in my personal life. I continue to stay dedicated to my craft while on this rigorous journey. I continue to express passion for programming; I've demonstrated my ability to ensure my work is up to standard. As many more challenges are on the horizon, my ability to persevere will continue to propel me past them.</p>
+                     <p>I'm an aspirant software engineer with a strong background in computer science. My experiences have reinforced my drive for success and demonstrated my capacity to overcome obstacles. I continue to be committed to my profession, making sure that my work meets high standards, and I am motivated to approach new challenges with the same tenacity and zeal.</p>
                      <br>
                      <h2>Quick Links</h2>
                      <div class="quick-links">
@@ -406,6 +409,47 @@
             </div>
          </section>
          <!-- /Portfolio Section -->
+         <!-- Blog Section -->
+         <section id="blog" class="blog section">
+            <!-- Section Title -->
+            <div class="container section-title" data-aos="fade-up">
+               <h2>Blog</h2>
+               <p>Check out my latest posts and updates on LinkedIn.</p>
+            </div>
+            <!-- End Section Title -->
+            <div class="container">
+               <div class="row gy-4">
+                  <!-- Blog Post Item 1 -->
+                  <div class="col-lg-4 col-md-6 blog-item">
+                     <div class="blog-info">
+                        <h4>Pathways2Tech Week 1</h4>
+                        <a href="https://www.linkedin.com/posts/babiker-babiker-15915b267_last-night-i-had-the-privilege-of-attending-activity-7222656920535384064-E3gk?utm_source=share&utm_medium=member_desktop" class="read-more">Read More</a>
+                     </div>
+                     <!-- LinkedIn Embed 1 -->
+                     <div class="linkedin-embed">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7222656918916407296" height="986" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                     </div>
+                  </div>
+                  <!-- End Blog Post Item 1 -->
+                  
+                  <!-- Blog Post Item 2 -->
+                  <div class="col-lg-4 col-md-6 blog-item">
+                     <div class="blog-info">
+                        <h4>New Beginnings</h4>
+                        <a href="https://www.linkedin.com/posts/babiker-babiker-15915b267_softwareengineering-headstarter-activity-7219984427425091584-MfMT?utm_source=share&utm_medium=member_desktop" class="read-more">Read More</a>
+                     </div>
+                     <!-- LinkedIn Embed 2 -->
+                     <div class="linkedin-embed">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" height="900" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                     </div>
+                  </div>
+                  <!-- End Blog Post Item 2 -->
+                  
+                  <!-- Add more blog items as needed -->
+               </div>
+            </div>
+         </section>
+         <!-- End Blog Section -->
          <!-- Contact Section -->
          <section id="contact" class="contact">
             <div class="container">
