Removed edu and added new pics for v1 and v2 portfolio

--- a/index.html
+++ b/index.html
@@ -122,23 +122,6 @@
                         </a>
                      </div>
                      <br>
-                     <h2>Education</h2>
-                     <p>
-                        <b>California State University, Fullerton | May 2026</b>
-                        <br>
-                     <li>Bachelor of Science B.S. Computer Science</li>
-                     </p>
-                     <p>
-                        <b>El Camino College | June 2024</b>
-                        <br>
-                     <li>Certificate of Achievement Computer Science</li>
-                     <li>Coursework: Computing in C++, Data Structures, Computing in Java, Advanced C++</li>
-                     </p>
-                     <p>
-                        <b>Hawthorne Math & Science Academy | June 2022</b>
-                        <br>
-                     <li>Certificate of Proficiency (CHSPE)</li>
-                     </p><br>
                   </div>
                </div>
             </div>
@@ -347,7 +330,7 @@
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
                      <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui">
-                        <img src="assets/img/portfolio.png" class="img-fluid project-image" alt="v2 Portfolio">
+                        <img src="assets/img/v2.png" class="img-fluid project-image" alt="v2 Portfolio">
                         <div class="portfolio-info">
                            <h4>v2 Portfolio</h4>
                            <p>View previous version of my portfolio (v2) <a href="https://bbabiker.com/v2" title="v2. portfolio">here</a>.
@@ -360,6 +343,26 @@
                            </div>
                            </p>
                            <a href="https://github.com/BabikerBabiker/v2" title="v2 Portfolio Repository" class="details-link">
+                           <i class="bi bi-link-45deg"></i>
+                           </a>
+                        </div>
+                     </div>
+                     <!-- End Portfolio Item -->
+                      <!-- Portfolio Item -->
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui">
+                        <img src="assets/img/v1.png" class="img-fluid project-image" alt="v1 Portfolio">
+                        <div class="portfolio-info">
+                           <h4>v1 Portfolio</h4>
+                           <p>View first version of my portfolio (v1) <a href="https://bbabiker.com/v1" title="v1. portfolio">here</a>.
+                           <div class="tags">
+                              <span class="tag html">HTML</span>
+                              <span class="tag css">CSS</span>
+                              <span class="tag js">JavaScript</span>
+                              <span class="tag github">GitHub</span>
+                              <span class="tag vscode">VS Code</span>
+                           </div>
+                           </p>
+                           <a href="https://github.com/BabikerBabiker/v1" title="v1 Portfolio Repository" class="details-link">
                            <i class="bi bi-link-45deg"></i>
                            </a>
                         </div>
