--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                               <span class="tag api">API</span>
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
+                              <span class="tag vercel">Vercel</span>
                            </div>
                            </p>
                            <a href="https://github.com/BabikerBabiker/Pantry-App" title="Pantry App Repository" class="details-link">
