--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
-                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-cli">
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-python filter-gui">
                         <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="InstaInsight">
                         <div class="portfolio-info">
                            <h4>InstaInsight</h4>
-                           <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader API.
+                           <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader API. Displayed via a simple UI.
                            <div class="tags">
                               <span class="tag python">Python</span>
                               <span class="tag file-io">File: I/O</span>
