added new blog post

--- a/index.html
+++ b/index.html
@@ -423,33 +423,45 @@
             <!-- End Section Title -->
             <div class="container">
                <div class="row gy-4">
-                  <!-- Blog Post Item 1 -->
+                  <!-- Blog Post -->
+                  <div class="col-lg-4 col-md-6 blog-item">
+                     <div class="blog-info">
+                        <h4>Pathways2Tech Week 2</h4>
+                        <a href="https://www.linkedin.com/posts/babiker-babiker-15915b267_theres-more-to-software-engineering-than-activity-7225244154425921537-HQMg?utm_source=share&utm_medium=member_desktop" class="read-more">Read More</a>
+                     </div>
+                     <!-- LinkedIn Embed -->
+                     <div class="linkedin-embed">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7225244151875821568" height="986" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                     </div>
+                  </div>
+                  <!-- End Blog Post -->
+
+                  <!-- Blog Post -->
                   <div class="col-lg-4 col-md-6 blog-item">
                      <div class="blog-info">
                         <h4>Pathways2Tech Week 1</h4>
                         <a href="https://www.linkedin.com/posts/babiker-babiker-15915b267_last-night-i-had-the-privilege-of-attending-activity-7222656920535384064-E3gk?utm_source=share&utm_medium=member_desktop" class="read-more">Read More</a>
                      </div>
-                     <!-- LinkedIn Embed 1 -->
+                     <!-- LinkedIn Embed -->
                      <div class="linkedin-embed">
                         <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7222656918916407296" height="986" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
                      </div>
                   </div>
-                  <!-- End Blog Post Item 1 -->
+                  <!-- End Blog Post -->
                   
-                  <!-- Blog Post Item 2 -->
+                  <!-- Blog Post Item -->
                   <div class="col-lg-4 col-md-6 blog-item">
                      <div class="blog-info">
                         <h4>New Beginnings</h4>
                         <a href="https://www.linkedin.com/posts/babiker-babiker-15915b267_softwareengineering-headstarter-activity-7219984427425091584-MfMT?utm_source=share&utm_medium=member_desktop" class="read-more">Read More</a>
                      </div>
-                     <!-- LinkedIn Embed 2 -->
+                     <!-- LinkedIn Embed -->
                      <div class="linkedin-embed">
                         <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:7219984426649231360" height="900" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
                      </div>
                   </div>
-                  <!-- End Blog Post Item 2 -->
+                  <!-- End Blog Post -->
                   
-                  <!-- Add more blog items as needed -->
                </div>
             </div>
          </section>
