--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                      <li data-filter=".filter-cpp">C++</li>
                      <li data-filter=".filter-java">Java</li>
                      <li data-filter=".filter-python">Python</li>
+                     <li data-filter=".filter-ai">AI</li>
                      <li data-filter=".filter-web">Web Dev</li>
                      <li data-filter=".filter-db">Database</li>
                      <li data-filter=".filter-gui">GUI</li>
@@ -209,11 +210,32 @@
                      </div>
                      <!-- End Portfolio Item -->
                      <!-- Portfolio Item -->
+                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-ai">
+                        <img src="assets/img/aichat.png" class="img-fluid project-image" alt="AI Chatbot">
+                        <div class="portfolio-info">
+                           <h4>AI Chatbot</h4>
+                           <p>AI Chatbot application collaberated on in a group of 4. Includes responsive chat interface using Gemini, by google, to power and respond back to the user.<a href="https://bbabiker.com/chat" title="AI Chatbot"> View it here</a>.
+                           <div class="tags">
+                              <span class="tag nextjs">Next.js</span>
+                              <span class="tag react">React</span>
+                              <span class="tag materialui">Material UI</span>
+                              <span class="tag gemini">Gemini API</span>
+                              <span class="tag github">GitHub</span>
+                              <span class="tag vscode">VS Code</span>
+                           </div>
+                           </p>
+                           <a href="https://github.com/BabikerBabiker/v2" title="v2 Portfolio Repository" class="details-link">
+                           <i class="bi bi-link-45deg"></i>
+                           </a>
+                        </div>
+                     </div>
+                     <!-- End Portfolio Item -->
+                     <!-- Portfolio Item -->
                      <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-web filter-gui filter-db">
                         <img src="assets/img/PantryApp.jpg" class="img-fluid project-image" alt="Pantry App">
                         <div class="portfolio-info">
                            <h4>Pantry App</h4>
-                           <p>An intuitive application designed to manage and track your food inventory with ease, featuring item addition, removal, and detailed sorting and search functionalities. <a href="https://bbabiker.com/pantry">Web App</a>
+                           <p>An intuitive application designed to manage and track your food inventory with ease, featuring item addition, removal, and detailed sorting and search functionalities. <a href="https://bbabiker.com/pantry"> View it here</a>.
                            <div class="tags">
                               <span class="tag nextjs">Next.js</span>
                               <span class="tag firebase">Firebase</span>
@@ -314,11 +336,11 @@
                         <img src="assets/img/InstaInsight.jpg" class="img-fluid project-image" alt="InstaInsight">
                         <div class="portfolio-info">
                            <h4>InstaInsight</h4>
-                           <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader API. Displayed via a simple UI.
+                           <p>Python script that logs into Instagram using credentials from a file, checks for users followers and users following, and identifies users who follow you but you don't follow back, utilizing the Instaloader library. Displayed via a simple UI.
                            <div class="tags">
                               <span class="tag python">Python</span>
                               <span class="tag file-io">File: I/O</span>
-                              <span class="tag api">API</span>
+                              <span class="tag tkinter">Tkinter</span>
                               <span class="tag github">GitHub</span>
                               <span class="tag vscode">VS Code</span>
                            </div>
