Added commit history to footer

--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
                   <strong class="px-1 sitename">Babiker Babiker</strong>
                   <span>All Rights Reserved</span>
                   <br>v3. Portfolio
+                  <br>Last Updated: <span id="last-updated">Loading...</span>
                </p>
             </div>
             <div class="social-links d-flex justify-content-center">
@@ -565,8 +566,14 @@
       <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
       <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
       <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
       <!-- Main JS File -->
       <script src="assets/js/main.js"></script>
+
+      <!-- Commit Update History JS File -->
+      <script src="assets/js/commit.js"></script>
+
+      <!-- Optimizing SEO -->
       <script type="application/ld+json">
          {
            "@context": "https://schema.org",
